--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^7.2.1",
-    "ag-grid-community": "^23.0.2",
-    "ag-grid-react": "^23.0.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "express": "^4.17.1",
+    "mkdirp": "^1.0.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-strap": "0.0.1",
     "react-super-responsive-table": "^5.1.1",
-    "react-tabelify": "^2.0.4",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uninstall": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
