--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "uninstall": "0.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install -g serve && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
